[project]
name = "integrate-langgraph-pydanticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "pydantic-ai>=1.0.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "structlog>=25.4.0",
    "uvicorn>=0.36.0",
    "sqlalchemy>=2.0.43",
    "pandas>=2.3.2",
    "langgraph>=0.6.7",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
    "fastapi-cli>=0.0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]
